# euraxess-improved-search

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: daily-update.yml
euraxess_scraper/: __init__.py  cli.py  config.py  db.py  discovery.py  export.py  fetch.py  indexing.py  language.py  nli_classifier.py  parse_job.py  search.py  taxonomy.py  topics.py  utils.py
euraxess_scraper/resources/: __init__.py  job_type_synonyms.yaml  topic_buckets.yaml
euraxess_scraper/web/: __init__.py  app.py
euraxess_scraper/web/templates/: index.html  job_detail.html
scripts/: scheduled_update.sh
tests/: conftest.py  test_checkpoint.py  test_dedup.py  test_discovery.py  test_integration.py  test_not_modified.py  test_parse_job.py  test_search.py  test_search_eval.py  test_search_filters.py  test_taxonomy.py  test_topics.py  test_web_app.py
tests/fixtures/: gold_queries.yaml  job_detail_sample.html  search_results_page.html
